优化ClearAttribute实现, 恢复兼容性
ClearAttribute使用`空列表`代替之前`设置伤害为0`
避免使用java21函数 List.getFirst()